# pik

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ac_predictions.cc  ac_predictions.h  ac_predictions_test.cc  ac_strategy.cc  ac_strategy.h  adaptive_quantization.cc  adaptive_quantization.h  adaptive_reconstruction.cc  adaptive_reconstruction.h  adaptive_reconstruction_fwd.h  adaptive_reconstruction_test.cc  af_edge_preserving_filter.cc  af_edge_preserving_filter.h  af_epf.cctest  af_solver.h  af_stats.cc  af_stats.h  alpha.cc  alpha.h  alpha_blend.cc  alpha_blend.h  ans_common.cc  ans_common.h  ans_decode.cc  ans_decode.h  ans_encode.cc  ans_encode.h  ans_encode_test.cc  ans_params.h  ans_test.cc  approx_cube_root.h  approx_cube_root_test.cc  ar_control_field.cc  ar_control_field.h  (+250 more)
benchmark/: benchmark_codec_pik.cc  benchmark_codec_pik.h  benchmark_codec_png.cc  benchmark_codec_png.h  benchmark_file_io.cc  benchmark_file_io.h  benchmark_xl.cc  benchmark_xl.h
butteraugli/: butteraugli.cc  butteraugli.h
comparison_tool/: LICENSE  README.md  demo.css  index.html  style.css
comparison_tool/js/: bpgdec-0.9.4.js  jp2Worker.js  jxrWorker.js  jxrWorker.js.map  jxrdeclib.js  pica.min.js  splitimage2.js  webpWorker.js
comparison_tool/viewer/: CMakeLists.txt  codec_comparison_window.cc  codec_comparison_window.h  codec_comparison_window.ui  compare_codecs.cc  compare_images.cc  image_loading.cc  image_loading.h  split_image_renderer.cc  split_image_renderer.h  split_image_view.cc  split_image_view.h  split_image_view.ui
docs/: color_management.md  dc_predictor.md  entropy_coding_basic.md  file_format.md  upsample.md
guetzli/: butteraugli_comparator.cc  butteraugli_comparator.h  color_transform.h  comparator.h  dct_double.cc  dct_double.h  debug_print.cc  debug_print.h  entropy_encode.cc  entropy_encode.h  fast_log.h  fdct.cc  fdct.h  gamma_correct.cc  gamma_correct.h  idct.cc  idct.h  jpeg_bit_writer.h  jpeg_data.cc  jpeg_data.h  jpeg_data_decoder.cc  jpeg_data_decoder.h  jpeg_data_encoder.cc  jpeg_data_encoder.h  jpeg_data_reader.cc  jpeg_data_reader.h  jpeg_data_writer.cc  jpeg_data_writer.h  jpeg_error.h  jpeg_huffman_decode.cc  jpeg_huffman_decode.h  output_image.cc  output_image.h  preprocess_downsample.cc  preprocess_downsample.h  processor.cc  processor.h  quantize.cc  quantize.h  score.cc  (+2 more)
pik/: ac_predictions.cc  ac_predictions.h  ac_predictions_test.cc  ac_strategy.cc  ac_strategy.h  adaptive_quantization.cc  adaptive_quantization.h  adaptive_reconstruction.cc  adaptive_reconstruction.h  adaptive_reconstruction_test.cc  ar_control_field.cc  ar_control_field.h  block_dictionary.cc  block_dictionary.h  butteraugli_comparator.h  cache_aligned.cc  codec.h  color_correlation.cc  compressed_dc.cc  compressed_dc.h  compressed_image.cc  compressed_image.h  compressed_image_fwd.h  compressed_image_test.cc  convolve.h  cpik.cc  cpik.h  cpik_main.cc  data_parallel.h  dc_predictor.h  dct.h  dct_simd_any.h  dct_util.cc  dct_util.h  dct_util_test.cc  detect_dots.cc  dpik.cc  dpik.h  dpik_main.cc  entropy_coder.cc  (+46 more)
pik/butteraugli/: butteraugli.h
pik/research/: lossless16.cc  lossless16.h  lossless16_test.cc  lossless8.cc  lossless8.h  lossless8_test.cc  lossless_c3p.h  lossless_entropy.cc  lossless_entropy.h
pik/simd/: Makefile  targets.h
pik/x11/: icc.cc  icc.h
simd/: Makefile  README.md  arch.h  arm64_neon.h  attr_test.cc  attr_test_impl.h  compiler_specific.h  custom_dispatcher_test.cc  dispatch.cc  dispatch.h  foreach_target.h  port.h  quick_reference.md  scalar.h  shared.h  simd.h  simd_test.cc  simd_test.cctest  simd_test_target.cc  simd_test_target.h  simd_test_target_avx2.cc  simd_test_target_none.cc  simd_test_target_sse4.cc  targets.cc  targets.h  util.h  x86_avx2.h  x86_sse4.h
x11/: icc.cc  icc.h
